ethereum/templates/bootnode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootnode
  namespace: ethereum
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: ethereum
      app.kubernetes.io/name: ethereum
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ethereum
        app.kubernetes.io/name: ethereum
    spec:
      containers:
      - name: bootnode
        image: ethereum/client-go:alltools-release-1.10
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 0.5
        command: ["/bin/sh"]
        args:
        - "-c"
        - "bootnode --nodekey=/etc/bootnode/node.key --verbosity=4"
        volumeMounts:
        - name: data
          mountPath: /etc/bootnode
        ports:
        - name: discovery
          containerPort: 30301
          protocol: UDP
      volumes:
      - name: data
        emptyDir: {}
