ethereum/templates/bootnode-registrar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootnode-registrar
  namespace: ethereum
  labels:
    app.kubernetes.io/name: bootnode-registrar
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bootnode-registrar
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bootnode-registrar
    spec:
      containers:
        - name: bootnode-registrar
          image: jpoon/bootnode-registrar
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9898
