ethereum/templates/geth-miner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-geth-miner
  namespace: the-project
  labels:
    app.kubernetes.io/name: geth-miner
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: geth-miner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: geth-miner
    spec:
      containers:
        - name: geth-miner
          image: ethereum/client-go:release-1.10
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args:
            - "-c"
            - "geth --bootnodes=`cat /root/.ethereum/bootnodes` --mine --etherbase=0 --networkid=${NETWORK_ID} --ethstats=${HOSTNAME}:${ETHSTATS_SECRET}@${ETHSTATS_SVC} --verbosity=5"
          ports:
            - name: discovery-udp
              containerPort: 30303
              protocol: UDP
            - name: discovery-tcp
              containerPort: 30303
          volumeMounts:
            - name: data
              mountPath: /root/.ethereum
      volumes: 
        - name: data 
          emptyDir: {} 
        - name: config 
          configMap: 
            name: eth-geth
