ethereum/templates/geth-transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geth-transaction
  namespace: ethereum
  labels:
    app.kubernetes.io/name: geth-transaction
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: geth-transaction
  template:
    metadata:
      labels:
        app.kubernetes.io/name: geth-transaction
    spec:
      containers:
        - name: geth
          image: ethereum/client-go:release-1.10
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args:
            - "-c"
            - "geth --bootnodes=`cat /root/.ethereum/bootnodes` --networkid 2482601 --verbosity 5"
          ports:
            - name: rpc
              containerPort: 8545
            - name: ws
              containerPort: 8546
            - name: discovery-udp
              containerPort: 30303
              protocol: UDP
            - name: discovery-tcp
              containerPort: 30303
          volumeMounts:
            - name: data
              mountPath: /root/.ethereum
      volumes: 
        - name: data 
          emptyDir: {} 
        - name: config 
          configMap: 
            name: geth
