ethereum/templates/bootnode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootnode
  namespace: ethereum
spec:
  selector:
    app.kubernetes.io/name: bootnode
  clusterIP: None
  ports:
    - name: discovery
      port: 30301
      protocol: UDP
    - name: http
      port: 8080
