ethereum/templates/geth-transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth-transaction
  namespace: ethereum
  labels:
    app.kubernetes.io/name: geth-transaction
spec:
  selector:
    app.kubernetes.io/name: geth-transaction
  type: LoadBalancer
  ports:
  - name: rpc
    port: 8545
  - name: ws
    port: 8546
