ethereum/templates/geth-transaction-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: geth-transaction
  namespace: ethereum
spec:
  ingressClassName: nginx
  rules:
    - host: ethereum.homelab.bartbrinkman.nl
      http:
        paths:
          - backend:
              service:
                name: geth-transaction
                port:
                  number: 8545
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ethereum.homelab.bartbrinkman.nl
      secretName: geth-transaction-tls
